--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@font-face {
+  font-family: "space";
+  src: url("./assets/SpaceShooterRedux/Bonus/kenvector_future_thin.ttf");
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Press Start 2P", cursive;
+  font-family: "space", cursive;
 }
 html {
   font-size: 12px;
 }
-
+canvas {
+  image-rendering: crisp-edges;
+}
 body {
   width: 100vw;
   height: 100vh;
